fixed mis-alignment in the article grid

--- a/less/style.less
+++ b/less/style.less
@@ -55,6 +55,7 @@ body {
 	
 	article {
 		margin-bottom: 12px;
+        padding: 0;
 	}
 }
 
